--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
     
     <div class="contenedor">
-        <div class="app">
+        <div class="app" v-cloak >
             <componente-header></componente-header>
             <componente-main></componente-main>
             <componente-footer></componente-footer>
         </div>
     </div>
 
-
-
-
 	<script src="./res/js/vue.js"></script>
 	<script src="./res/js/vue2-filters.js"></script>
+    <script src="./res/js/componentes/componente-header.js"></script>
+    <script src="./res/js/componentes/componente-main.js"></script>
+    <script src="./res/js/componentes/componente-footer.js"></script>
     <script src="./res/js/main.js"></script>
 </body>
 </html>
