--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <div class="contenedor">
-        <div class="app">
+        <div class="app" v-cloak>
             <componente-header v-bind:titulo1="titulo1" v-bind:titulo2="titulo2" v-on:cambiar-ventana="cambiarVentana"></componente-header>
             <componente-main v-bind:ventana-actual="ventanaActual"></componente-main>
             <componente-footer></componente-footer>
