--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <!--Styles CSS-->
-    <link rel="stylesheet" href="./res/css/style.css">
+    <link rel="stylesheet" href="./res/css/styles.css">
 </head>
 <body>
     
