--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
         <!--Fin del componente header-->
 
         <!--Inicio del componente main-->
-        <componente-main v-bind:ventana-actual="ventanaActual"></componente-main>
+        <componente-contacto></componente-contacto>
         <!--Fin del componente main-->
 
         <!--Inicio del componente footer-->
@@ -33,7 +33,7 @@
     <script src="./res/js/vue.js"></script>
     <script src="./res/js/vue2-filters.js"></script>
     <script src="./res/js/componentes/componente-header.js"></script>
-    <script src="./res/js/componentes/componente-main.js"></script>
+    <script src="./res/js/componentes/componente-contacto.js"></script>
     <script src="./res/js/componentes/componente-footer.js"></script>
     <script src="./res/js/main.js"></script>
   </body>
