--- a/contacto.html
+++ b/contacto.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rapid Tools</title>
 
     <!--Styles CSS-->
-    <link rel="stylesheet" href="./res/css/styles.css" />
+    <link rel="stylesheet" href="./res/css/styles.css">
   </head>
   <body>
     <!--Inicio del contenedor Principal-->
@@ -15,7 +15,7 @@
       <!--Inicio de la ejecución de vue.js-->
       <div class="app" v-cloak>
         <!--Inicio del componente header-->
-        <componente-header v-bind:titulo1="titulo1" v-bind:titulo2="titulo2" v-bind:titulo2="titulo3" v-on:cambiar-ventana="cambiarVentana"></componente-header>
+        <componente-header v-bind:titulo1="titulo1" v-bind:titulo2="titulo2" v-bind:titulo3="titulo3" v-on:cambiar-ventana="cambiarVentana"></componente-header>
         <!--Fin del componente header-->
 
         <!--Inicio del componente main-->
